<resources>
    <string name="app_name">LenddoData</string>
    <string name="grant_access">Grant Access</string>
    <string name="permission_intro">Please give us access permission to Phone, SMS, Contacts, Photos/Media/Files, Location, and Calendar in order to generate your credit score. Rest assured, your data is safe as we use industry standard for encrypting private data over the internet.\n</string>
    <string name="learnmore_allcaps">LEARN MORE</string>
    <string name="back_allcaps">BACK</string>
    <string name="cancel_allcaps">CANCEL</string>
    <string name="done_allcaps">DONE</string>
    <string name="submit_allcaps">SUBMIT</string>
    <string name="continue_allcaps">CONTINUE</string>

    <string name="permission_rationale_partial">To continue using the app, you must have the following permissions:</string>
    <string name="permission_rationale_complete">To make sure you understand what we actually collect, we\'ve provided a detailed breakdown of the permissions below:</string>

    <string name="permission_title_sms">SMS</string>
    <string name="permission_title_phone">Phone</string>
    <string name="permission_title_location">Location</string>
    <string name="permission_title_contacts">Contacts</string>
    <string name="permission_title_calendar">Calendar</string>
    <string name="permission_title_media">Photos/Media/Files</string>

    <string name="permission_detail_sms">We use read access to SMS messages to determine a list of people you message most frequently. This helps us build a social graph by making use of the data you provided us.</string>
    <string name="permission_detail_phone">We use the phone state to obtain your Android device ID, which is sent to our servers and used for analytics and reporting purposes. We use read access to your call logs to determine a list of people you contact most frequently. This helps us build a social graph by making use of the data you provided us.</string>
    <string name="permission_detail_location">We study periodic locational activity. This helps us estimate with a fair level of accuracy on your most visited locations. We use this as a signal for building your credit score.</string>
    <string name="permission_detail_contacts">We use read access to contacts to determine a list of people in your contact list. This helps us build a social graph by making use of the data you provided us. We will not use this information to contact your friends.</string>
    <string name="permission_detail_calendar">Having access to calendar events helps us determine the time of the day you are most busy. People who are busy during the day have different credit behaviour than people who are busy during the night. We use this as a signal for building your credit score.</string>
    <string name="permission_detail_media">We use read access to Photos/Media/Files to extract geo-location information from image and video files. This helps us estimate with a fair level of accuracy on your most visited locations. We use this as a signal for building your credit score.</string>

    <string name="feedback_title">Help Us Improve</string>
    <string name="feedback_inquiry">What is your primary reason for not sharing data?</string>
    <string name="feedback1">I am worried about my data privacy.</string>
    <string name="feedback2">I am unclear on how sharing these permissions will help me.</string>
    <string name="feedback3">I am unclear on how my data would be used.</string>
    <string name="feedback4">Others</string>
    <string name="thank_you_title">Thank you</string>
    <string name="thank_you_detail">Your feedback means a great deal and will help us improve the product experience.</string>

    // Validation Message
    <string name="validation_msg_unsupported_exception">Validation is disabled.</string>
    <string name="validation_msg_mandatory_field">This field is required.</string>
    <string name="validation_msg_validation_disabled">Validation is disabled.</string>
    <string name="validation_msg_invalid_date">Invalid date.</string>
    <string name="validation_msg_invalid_date_format">Invalid date format.</string>
    <string name="validation_msg_invalid_email_format">Invalid email format.</string>

</resources>
