<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_feedback"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="26sp"
            android:textColor="#FFFFFF"
            android:text="@string/feedback_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:text="@string/feedback_inquiry"/>
        <RadioGroup
            android:id="@+id/rgrp_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rbtn_feedback1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@android:style/Theme.Material"
                tools:targetApi="lollipop"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:text="@string/feedback1" />
            <RadioButton
                android:id="@+id/rbtn_feedback2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@android:style/Theme.Material"
                tools:targetApi="lollipop"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:text="@string/feedback2"/>
            <RadioButton
                android:id="@+id/rbtn_feedback3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@android:style/Theme.Material"
                tools:targetApi="lollipop"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:text="@string/feedback3"/>
            <RadioButton
                android:id="@+id/rbtn_feedback4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@android:style/Theme.Material"
                tools:targetApi="lollipop"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:text="@string/feedback4"/>
            <EditText
                android:id="@+id/edt_otherfeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bottom_border"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:enabled="false"
                android:visibility="invisible"
                android:layout_marginLeft="30dp"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>